--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-    "main": "index.js",
-    "scripts": {
-        "start": "react-native start"
-    },
-    "dependencies": {
-        "expo": "~44.0.2",
-        "expo-splash-screen": "~0.14.1",
-        "expo-status-bar": "~1.2.0",
-        "hoist-non-react-statics": "^3.3.2",
-        "moment": "^2.29.1",
-        "react": "17.0.1",
-        "react-dom": "17.0.1",
-        "react-native": "0.64.3",
-        "react-native-web": "0.17.1"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.12.9"
-    },
-    "private": false
+  "name": "react-native-yet-another-datepicker",
+  "version": "0.1.8",
+  "description": "A react native simple date picker component without dependencies",
+  "keywords": [
+    "date-picker",
+    "simple-date-picker",
+    "datepicker",
+    "modaldatepicker"
+  ],
+  "author": "Jaison R Gusava <xd_jrg@hotmail.com>",
+  "license": "ISC",
+  "main": "index.js",
+  "scripts": {
+    "start": "react-native start"
+  },
+  "dependencies": {
+    "moment": "^2.29.1",
+    "react": ">=16.13.1",
+    "react-native": ">=0.63.4",
+    "hoist-non-react-statics": "^3.3.2"
+  },
+  "private": false
 }
